--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Fernandito Escalera</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<a href="segunda.html">Otra página más</a>
 </body>
 </html>
